# blocket-league

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
app/: globals.css  layout.tsx  page.tsx
blocket_league/: hallucination_assets.py  ring_probe.py
components/blocket-league/: blocket-league-lab.module.css  blocket-league-lab.tsx  hallucination-filmstrip.tsx  live-world-model.tsx  physics-emergence-viewer.tsx
lib/blocket-league/: sim.ts
public/blocket-league/hallucinations/: manifest.json
public/blocket-league/interpretability/: ring-probe.json
