[project]
name = "blocket-league"
version = "0.1.0"
description = "A tiny pixel world model and causal interpretability lab"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy>=2.0",
]

[project.optional-dependencies]
training = [
  "modal>=1.0",
  "onnx>=1.17",
  "onnxruntime>=1.20",
  "onnxscript>=0.1",
  "pillow>=10",
  "torch>=2.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["blocket_league"]
